frontend/test/should_fail/computations_decl_use_calls_arguments_mismatch_004.grg
procedure call()
{
	def var b:boolean;
	b,b = func(b);
}


